<resources>
  <string name="app_name">Android Demo</string>
  <string name="activities">Activity</string>
  <string name="no_title">No Title</string>
  <string name="no_notification_bar">No Notification Bar</string>
  <string name="toast">Toast</string>
  <string name="menu_item_1">Menu Item 1</string>
  <string name="menu_item_2">Menu Item 2</string>
  <string name="send_data">Send Data</string>
  <string name="no_data">No Data</string>
  <string name="receive_data">Receive Data</string>
  <string name="components">Components</string>
  <string name="fragments">Fragments</string>
  <string name="fragment_demo_text">This is a fragment</string>
  <string name="broadcasts">Broadcasts</string>
  <string name="broadcasts_hint">Try changing network or hit button to see broadcasts!</string>
  <string name="send_custom_broadcast">Send Custom Broadcast</string>
  <string name="files">Storage</string>
  <string name="read">Read</string>
  <string name="save">Save</string>
  <string name="file_hint">Input your data</string>
  <string name="text_file">Text File</string>
  <string name="shard_preferences">Shared Preferences</string>
  <string name="sql_lite">SQLite</string>
  <string name="fill_data">Fill Data</string>
  <string name="delete_all">Delete All</string>
  <string name="details">Details</string>
  <string name="new_book">New book</string>
  <string name="name">Name:</string>
  <string name="author">Author:</string>
  <string name="pages">Pages:</string>
  <string name="price">Price($):</string>
  <string name="delete">Delete</string>
  <string name="refresh">Refresh</string>
  <string name="notifications">Notifications</string>
  <string name="send_notification">Send Notification</string>
  <string name="remove_notification">Remove Notification</string>
  <string name="update_notification">Update Notification</string>
  <string name="messages">Messages</string>
  <string name="message_hint">Try sending some messages to this phone!</string>
  <string name="block_system_message">Block system notification</string>
  <string name="photos">Photos</string>
  <string name="camera">Camera</string>
  <string name="album">Gallery</string>
  <string name="multithreading">Multithreading</string>
  <string name="multithreading_hint">Show dialog after 5 sec.</string>
  <string name="start">Start</string>
  <string name="service">Service</string>
  <string name="service_hint">Calculate 1+2+…+100 using service after 5 sec.</string>
  <string name="start_normal_service">Start normal service</string>
  <string name="start_intent_service">Start intent service</string>
  <string name="web_view">WebView</string>
  <string name="web_view_hint">Input website…</string>
  <string name="web_data">Raw Data</string>
  <string name="location">Location</string>
  <string name="location_provider">Location Provider:</string>
  <string name="get_location">Refresh Location</string>
</resources>
